# Altseed2-rust

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  test.sh
docs/contents/: engine.md  file.md  graphics.md  joystick.md  keyboard_mouse.md  log.md  node.md  sound.md
docs/dev/: HowToBuild_Ja.md
documents/development/: HowToBuild_Ja.md
examples/: custom_node.rs  hello_world.rs  load_async.rs  log.rs  sound.rs  sprite.rs  stg_0.rs  text.rs
scripts/: BuildCore_Mac.sh  copy_cbg.py  copy_dylib.sh  generate_binding.py  generate_docs.py  generate_example.py
src/: array.rs  auto_generated_core_binding.rs  binding.rs  collections.rs  core_ext.rs  engine.rs  error.rs  lib.rs  log.rs  math.rs  node.rs  prelude.rs  runner.rs  sound.rs  structs.rs  task.rs  tests.rs
src/component/: camera.rs  collider.rs  drawn.rs  drawn_kind.rs  mod.rs  sorted.rs  storage.rs
src/documents/: _00_engine.rs  _01_graphics.rs  _01_node.rs  _02_file.rs  _02_graphics.rs  _02_keyboard_mouse.rs  _03_joystick.rs  _03_sound.rs  _04_sound.rs  _05_file.rs  _06_file.rs  _06_log.rs  _07_log.rs  mod.rs
src/examples/: _00_hello_world.rs  _01_sound.rs  _01_sprite.rs  _02_text.rs  _03_sound.rs  _04_log.rs  _05_custom_node.rs  _05_load_async.rs  _06_custom_node.rs  mod.rs  test_00_hello_world.rs  test_01_sprite.rs  test_02_text.rs  test_03_sound.rs  test_04_log.rs  test_05_load_async.rs  test_06_custom_node.rs
src/math/: easing.rs  mat.rs  mat22.rs  matrix.rs  mod.rs  transform.rs  vec.rs  vec2.rs  (+3 more)
tests/: camera.rs  drawn.rs  engine.rs  node.rs  sprite.rs  task.rs
(+20 files in other folders)
