[package]
name = "altseed2"
version = "0.1.0"
authors = ["Altseed <altseed.gameengine@gmail.com >"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4.0"
bitflags="1.2.1"
num = "0.2"
failure="0.1.7"
downcast-rs = "1.1.1"

[dev-dependencies]
futures = { version = "0.3", features = ["thread-pool"] }